<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="Playlist_maker">Playlist maker</string>
    <string name="Search">Поиск</string>
    <string name="Media">Медиатека</string>
    <string name="Setting">Настройки</string>
    <string name="Share">Поделиться приложением</string>
    <string name="Dark">Темная тема</string>
    <string name="Support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_development_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="text_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="message_Address">oksanochkaezhova@yandex.ru</string>
    <string name="message_Subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="link_to_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_nothing">Ничего не нашлось</string>
    <string name="text_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="text_update">Обновить</string>
    <string name="text_history">Вы искали</string>
    <string name="text_clear_history">Очистить историю</string>

    <string name="text_trackTime">Длительность</string>
    <string name="text_collectionName">Альбом</string>
    <string name="text_releaseDate">Год</string>
    <string name="text_primaryGenreName">Жанр</string>
    <string name="text_country">Страна</string>
</resources>