<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/Setting"
        app:titleTextColor="@color/black"
        app:titleTextAppearance="@style/MyToolbarTitleTextAppearance"
        app:contentInsetStartWithNavigation="0dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="@dimen/paddingHorizontal_setting"
        android:paddingVertical= "@dimen/paddingVertical_setting"
        android:text="@string/Dark"
        android:textSize="@dimen/text_size_setting" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="@dimen/paddingHorizontal_setting"
        android:paddingVertical="@dimen/paddingVertical_setting"
        android:text="@string/Share"
        android:textSize="@dimen/text_size_setting"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="@dimen/paddingHorizontal_setting"
        android:paddingVertical="@dimen/paddingVertical_setting"
        android:text="@string/Support"
        android:textSize="@dimen/text_size_setting"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward"
        android:paddingHorizontal="@dimen/paddingHorizontal_setting"
        android:paddingVertical="@dimen/paddingVertical_setting"
        android:text="@string/user_agreement"
        android:textSize="@dimen/text_size_setting"
        android:textColor="@color/black"/>

</LinearLayout>