<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom = "12dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cornerRadius = "16dp"
            android:backgroundTint="@color/white"
            android:text="@string/Search"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:layout_marginBottom = "8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/Media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:layout_marginBottom = "8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cornerRadius = "16dp"
            android:backgroundTint="@color/white"
            android:text="@string/Setting"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"/>
    </LinearLayout>

</LinearLayout>