<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="trackTime, collectionName, releaseDate, primaryGenreName, country" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:contentDescription="Назад"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_24" />

        <androidx.cardview.widget.CardView
            android:id="@+id/track"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/back_button">

            <ImageView
                android:id="@+id/trackImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="Smells Like Teen Spirit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/TextTimePlayTrack"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/track" />

        <TextView
            android:id="@+id/textArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="Smells Like Teen Spirit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/TextTimePlayTrack"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/textTrackName" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="54dp"
            android:background="@null"
            android:contentDescription="Добавить в избранное"
            android:elevation="8dp"
            android:src="@drawable/ic_button_plus"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/textArtistName" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Воспроизвести трек"
            android:elevation="8dp"
            android:src="@drawable/ic_play_84"
            app:layout_constraintBottom_toBottomOf="@+id/plus"
            app:layout_constraintEnd_toStartOf="@+id/like"
            app:layout_constraintStart_toEndOf="@+id/plus"
            app:layout_constraintTop_toTopOf="@+id/plus" />

        <ImageButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="Добавить в плейлист"
            android:elevation="8dp"
            android:src="@drawable/ic_button_like"
            app:layout_constraintBottom_toBottomOf="@+id/plus"
            app:layout_constraintEnd_toEndOf="@+id/rightBorder"
            app:layout_constraintTop_toTopOf="@+id/plus" />

        <TextView
            android:id="@+id/timePlayTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="0:30"
            style="@style/TextTimePlayTrack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play" />

        <TextView
            android:id="@+id/trackTime"
            style="@style/TextInfoTrack"
            android:layout_marginTop="40dp"
            android:text="@string/text_trackTime"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/timePlayTrack" />

        <TextView
            android:id="@+id/valueTrackTime"
            style="@style/TextInfoTrack"
            android:text="5:35"
            android:textColor="@color/dark_blue_white"
            app:layout_constraintBaseline_toBaselineOf="@+id/trackTime"
            app:layout_constraintEnd_toEndOf="@id/rightBorder" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/collectionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="collectionName,valueCollectionName" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/releaseDateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="releaseDate,valueReleaseDate" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/TextInfoTrack"
            android:layout_marginTop="16dp"
            android:text="@string/text_collectionName"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackTime" />

        <TextView
            android:id="@+id/valueCollectionName"
            style="@style/TextInfoTrack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="Smells Like Teen Spirit"
            android:textColor="@color/dark_blue_white"
            app:layout_constraintBaseline_toBaselineOf="@+id/collectionName"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/TextInfoTrack"
            android:layout_marginTop="16dp"
            android:text="@string/text_releaseDate"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/collectionName" />

        <TextView
            android:id="@+id/valueReleaseDate"
            style="@style/TextInfoTrack"
            android:text="1965"
            android:textColor="@color/dark_blue_white"
            app:layout_constraintBaseline_toBaselineOf="@+id/releaseDate"
            app:layout_constraintEnd_toEndOf="@id/rightBorder" />

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/TextInfoTrack"
            android:layout_marginTop="16dp"
            android:text="@string/text_primaryGenreName"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/releaseDate" />

        <TextView
            android:id="@+id/valuePrimaryGenreName"
            style="@style/TextInfoTrack"
            android:text="Rock"
            android:textColor="@color/dark_blue_white"
            app:layout_constraintBaseline_toBaselineOf="@+id/primaryGenreName"
            app:layout_constraintEnd_toEndOf="@id/rightBorder" />

        <TextView
            android:id="@+id/country"
            style="@style/TextInfoTrack"
            android:layout_marginTop="16dp"
            android:text="@string/text_country"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreName" />

        <TextView
            android:id="@+id/valueCountry"
            style="@style/TextInfoTrack"
            android:text="Великобритания"
            android:textColor="@color/dark_blue_white"
            app:layout_constraintBaseline_toBaselineOf="@+id/country"
            app:layout_constraintEnd_toEndOf="@id/rightBorder" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>